kubernetes/main/apps/home/miniflux/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: miniflux
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: miniflux
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
        # - matchLabels:
        #     app.kubernetes.io/name: n8n
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # same-node ClusterIP replies miss CT reverse-xlate (socketLB
    # hostNamespaceOnly + endpointRoutes) and hit ingress policy
    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: postgres-1
            io.kubernetes.pod.namespace: database
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/instance: traefik-networking
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
            cnpg.io/cluster: postgres-1
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    # feed fetching
    - toEntities: ["world"]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
